# monotributo-cli

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: specs-monotributo-v1.md  specs-monotributo-v2.md
monofact/: afip_adapter.py  auth.py  cli.py  config.py  storage.py
scripts/: smoke_homo.sh
skills/monotributo-cli/: SKILL.md
skills/monotributo-cli/agents/: openai.yaml
skills/monotributo-cli/references/: commands.md
skills/monotributo-cli/scripts/: run_monofact_prod.sh
tests/: test_afip_adapter.py  test_auth.py  test_cli_contract.py  test_cli_integration.py
